--- a/optimization/experiments/scheduling_1.ipynb
+++ b/optimization/experiments/scheduling_1.ipynb
@@ -367,10 +367,235 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "import matplotlib.pyplot as plt\n",
+    "from IPython.display import display\n",
+    "import pandas as pd\n",
+    "\n",
+    "import shutil\n",
+    "import sys\n",
+    "import os.path\n",
+    "from pyomo.gdp import *\n",
+    "import pyomo.environ as pe\n",
+    "import numpy as np\n",
+    "import math"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m = pe.ConcreteModel()\n",
+    "T =90\n",
+    "duration=30"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m.Y = pe.RangeSet(1, T - duration)\n",
+    "m.S = pe.RangeSet(0, duration - 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "processes= {'p1': {'start_window': 0, 'end_window': 118, 'duration': 12, 'dependencies': None}, 'p2': {'start_window': 0, 'end_window': 118, 'duration': 6, 'dependencies': None}, 'p3': {'start_window': 0, 'end_window': 118, 'duration': 9, 'dependencies': None}}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['p1', 'p2', 'p3']\n"
+     ]
+    }
+   ],
+   "source": [
+    "m.processes = pe.Set(initialize=processes.keys())\n",
+    "print([p for p in m.processes])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('p1', 'p2'), ('p1', 'p3'), ('p2', 'p3')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "m.process_pairs = pe.Set(initialize = m.processes * m.processes, dimen=2, filter=lambda m, j, k : j < k)\n",
+    "print([(j,k) for j,k in m.process_pairs])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('p1', 'p2'), ('p1', 'p3'), ('p2', 'p3')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "m.y = pe.Var(m.process_pairs, domain=pe.Boolean)\n",
+    "print([(j,k) for j,k in m.y])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "m.start = pe.Var(m.processes, initialize=0, domain=pe.NonNegativeReals)\n",
+    "print([pe.value(m.start[s]) for s in m.start])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Implicitly replacing the Component attribute Y (type=<class\n",
+      "    'pyomo.core.base.set.FiniteScalarRangeSet'>) on block unknown with a new\n",
+      "    Component (type=<class 'pyomo.core.base.set.FiniteScalarRangeSet'>). This\n",
+      "    is usually indicative of a modelling error. To avoid this warning, use\n",
+      "    block.del_component() and block.add_component().\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60]\n",
+      "WARNING: Implicitly replacing the Component attribute Yy (type=<class\n",
+      "    'pyomo.core.base.set.IndexedSet'>) on block unknown with a new Component\n",
+      "    (type=<class 'pyomo.core.base.set.IndexedSet'>). This is usually\n",
+      "    indicative of a modelling error. To avoid this warning, use\n",
+      "    block.del_component() and block.add_component().\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "Cannot add component 'Yy_index' (type <class 'pyomo.core.base.set.SetProduct_OrderedSet'>) to block 'unknown': a component by that name (type <class 'pyomo.core.base.set.SetProduct_OrderedSet'>) is already defined.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [12], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m m\u001b[39m.\u001b[39mY \u001b[39m=\u001b[39m pe\u001b[39m.\u001b[39mRangeSet(\u001b[39m1\u001b[39m, T \u001b[39m-\u001b[39m duration)\n\u001b[0;32m      3\u001b[0m \u001b[39mprint\u001b[39m([s \u001b[39mfor\u001b[39;00m s \u001b[39min\u001b[39;00m m\u001b[39m.\u001b[39mY])\n\u001b[1;32m----> 4\u001b[0m m\u001b[39m.\u001b[39;49mYy \u001b[39m=\u001b[39m pe\u001b[39m.\u001b[39mSet(m\u001b[39m.\u001b[39mprocesses\u001b[39m*\u001b[39mm\u001b[39m.\u001b[39mY)\n\u001b[0;32m      6\u001b[0m \u001b[39m# m.Y_combined = pe.Var(m.Yy, initialize=0, domain=pe.NonNegativeReals)\u001b[39;00m\n\u001b[0;32m      7\u001b[0m \n\u001b[0;32m      8\u001b[0m \u001b[39m# m.y_t_matrix = pe.Set(initialize=m.processes*m.T)\u001b[39;00m\n\u001b[0;32m      9\u001b[0m \u001b[39m# m.y_t_combined = pe.Var(m.y_t_matrix, domain=pe.Binary)\u001b[39;00m\n",
+      "File \u001b[1;32me:\\repos\\carbon-hack\\carbonprocessoptimizer\\venv\\lib\\site-packages\\pyomo\\core\\base\\block.py:669\u001b[0m, in \u001b[0;36m_BlockData.__setattr__\u001b[1;34m(self, name, val)\u001b[0m\n\u001b[0;32m    660\u001b[0m     logger\u001b[39m.\u001b[39mwarning(\n\u001b[0;32m    661\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mImplicitly replacing the Component attribute \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    662\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m (type=\u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m) on block \u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m with a new Component (type=\u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m).\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    666\u001b[0m         \u001b[39m%\u001b[39m (name, \u001b[39mtype\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcomponent(name)), \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mname,\n\u001b[0;32m    667\u001b[0m            \u001b[39mtype\u001b[39m(val)))\n\u001b[0;32m    668\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdel_component(name)\n\u001b[1;32m--> 669\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49madd_component(name, val)\n\u001b[0;32m    670\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m    671\u001b[0m     \u001b[39m#\u001b[39;00m\n\u001b[0;32m    672\u001b[0m     \u001b[39m# The incoming value is not a component, so we set the\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    679\u001b[0m     \u001b[39m# generated while setting the value.\u001b[39;00m\n\u001b[0;32m    680\u001b[0m     \u001b[39m#\u001b[39;00m\n\u001b[0;32m    681\u001b[0m     \u001b[39mtry\u001b[39;00m:\n",
+      "File \u001b[1;32me:\\repos\\carbon-hack\\carbonprocessoptimizer\\venv\\lib\\site-packages\\pyomo\\core\\base\\block.py:1083\u001b[0m, in \u001b[0;36m_BlockData.add_component\u001b[1;34m(self, name, val)\u001b[0m\n\u001b[0;32m   1072\u001b[0m val\u001b[39m.\u001b[39m_name \u001b[39m=\u001b[39m name\n\u001b[0;32m   1073\u001b[0m \u001b[39m#\u001b[39;00m\n\u001b[0;32m   1074\u001b[0m \u001b[39m# We want to add the temporary / implicit sets first so that\u001b[39;00m\n\u001b[0;32m   1075\u001b[0m \u001b[39m# they get constructed before this component\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   1081\u001b[0m \u001b[39m# components.\u001b[39;00m\n\u001b[0;32m   1082\u001b[0m \u001b[39m#\u001b[39;00m\n\u001b[1;32m-> 1083\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_add_implicit_sets(val)\n\u001b[0;32m   1084\u001b[0m \u001b[39m#\u001b[39;00m\n\u001b[0;32m   1085\u001b[0m \u001b[39m# Add the component to the underlying Component store\u001b[39;00m\n\u001b[0;32m   1086\u001b[0m \u001b[39m#\u001b[39;00m\n\u001b[0;32m   1087\u001b[0m _new_idx \u001b[39m=\u001b[39m \u001b[39mlen\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_decl_order)\n",
+      "File \u001b[1;32me:\\repos\\carbon-hack\\carbonprocessoptimizer\\venv\\lib\\site-packages\\pyomo\\core\\base\\block.py:903\u001b[0m, in \u001b[0;36m_BlockData._add_implicit_sets\u001b[1;34m(self, val)\u001b[0m\n\u001b[0;32m    898\u001b[0m             \u001b[39mself\u001b[39m\u001b[39m.\u001b[39madd_component(\u001b[39m\"\u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m_index_\u001b[39m\u001b[39m%d\u001b[39;00m\u001b[39m\"\u001b[39m \u001b[39m%\u001b[39m (val\u001b[39m.\u001b[39mlocal_name, ctr), tset)\n\u001b[0;32m    899\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mgetattr\u001b[39m(val, \u001b[39m'\u001b[39m\u001b[39m_index_set\u001b[39m\u001b[39m'\u001b[39m, \u001b[39mNone\u001b[39;00m) \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m \\\n\u001b[0;32m    900\u001b[0m         \u001b[39mand\u001b[39;00m \u001b[39misinstance\u001b[39m(val\u001b[39m.\u001b[39m_index_set, _SetDataBase) \\\n\u001b[0;32m    901\u001b[0m         \u001b[39mand\u001b[39;00m val\u001b[39m.\u001b[39m_index_set\u001b[39m.\u001b[39mparent_component()\u001b[39m.\u001b[39mparent_block() \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m \\\n\u001b[0;32m    902\u001b[0m         \u001b[39mand\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39misinstance\u001b[39m(val\u001b[39m.\u001b[39m_index_set\u001b[39m.\u001b[39mparent_component(), GlobalSetBase):\n\u001b[1;32m--> 903\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49madd_component(\u001b[39m\"\u001b[39;49m\u001b[39m%s\u001b[39;49;00m\u001b[39m_index\u001b[39;49m\u001b[39m\"\u001b[39;49m \u001b[39m%\u001b[39;49m (val\u001b[39m.\u001b[39;49mlocal_name,), val\u001b[39m.\u001b[39;49m_index_set\u001b[39m.\u001b[39;49mparent_component())\n\u001b[0;32m    904\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mgetattr\u001b[39m(val, \u001b[39m'\u001b[39m\u001b[39minitialize\u001b[39m\u001b[39m'\u001b[39m, \u001b[39mNone\u001b[39;00m) \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m \\\n\u001b[0;32m    905\u001b[0m         \u001b[39mand\u001b[39;00m \u001b[39misinstance\u001b[39m(val\u001b[39m.\u001b[39minitialize, _SetDataBase) \\\n\u001b[0;32m    906\u001b[0m         \u001b[39mand\u001b[39;00m val\u001b[39m.\u001b[39minitialize\u001b[39m.\u001b[39mparent_component()\u001b[39m.\u001b[39mparent_block() \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m \\\n\u001b[0;32m    907\u001b[0m         \u001b[39mand\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39misinstance\u001b[39m(val\u001b[39m.\u001b[39minitialize\u001b[39m.\u001b[39mparent_component(), GlobalSetBase):\n\u001b[0;32m    908\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39madd_component(\u001b[39m\"\u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m_index_init\u001b[39m\u001b[39m\"\u001b[39m \u001b[39m%\u001b[39m (val\u001b[39m.\u001b[39mlocal_name,), val\u001b[39m.\u001b[39minitialize\u001b[39m.\u001b[39mparent_component())\n",
+      "File \u001b[1;32me:\\repos\\carbon-hack\\carbonprocessoptimizer\\venv\\lib\\site-packages\\pyomo\\core\\base\\block.py:1023\u001b[0m, in \u001b[0;36m_BlockData.add_component\u001b[1;34m(self, name, val)\u001b[0m\n\u001b[0;32m   1019\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mAttempting to declare a block component using \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m   1020\u001b[0m                      \u001b[39m\"\u001b[39m\u001b[39mthe name of a reserved attribute:\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m\\t\u001b[39;00m\u001b[39m%s\u001b[39;00m\u001b[39m\"\u001b[39m\n\u001b[0;32m   1021\u001b[0m                      \u001b[39m%\u001b[39m (name,))\n\u001b[0;32m   1022\u001b[0m \u001b[39mif\u001b[39;00m name \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m\u001b[39m__dict__\u001b[39m:\n\u001b[1;32m-> 1023\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mRuntimeError\u001b[39;00m(\n\u001b[0;32m   1024\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mCannot add component \u001b[39m\u001b[39m'\u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m (type \u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m) to block \u001b[39m\u001b[39m'\u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m: a \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m   1025\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mcomponent by that name (type \u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m) is already defined.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m   1026\u001b[0m         \u001b[39m%\u001b[39m (name, \u001b[39mtype\u001b[39m(val), \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mname, \u001b[39mtype\u001b[39m(\u001b[39mgetattr\u001b[39m(\u001b[39mself\u001b[39m, name))))\n\u001b[0;32m   1027\u001b[0m \u001b[39m#\u001b[39;00m\n\u001b[0;32m   1028\u001b[0m \u001b[39m# Skip the add_component() logic if this is a\u001b[39;00m\n\u001b[0;32m   1029\u001b[0m \u001b[39m# component type that is suppressed.\u001b[39;00m\n\u001b[0;32m   1030\u001b[0m \u001b[39m#\u001b[39;00m\n\u001b[0;32m   1031\u001b[0m _component \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mparent_component()\n",
+      "\u001b[1;31mRuntimeError\u001b[0m: Cannot add component 'Yy_index' (type <class 'pyomo.core.base.set.SetProduct_OrderedSet'>) to block 'unknown': a component by that name (type <class 'pyomo.core.base.set.SetProduct_OrderedSet'>) is already defined."
+     ]
+    }
+   ],
+   "source": [
+    "# Process is not running except during the working duration\n",
+    "m.Y = pe.RangeSet(1, T - duration)\n",
+    "print([s for s in m.Y])\n",
+    "m.Yy = pe.Set(m.processes*m.Y)\n",
+    "\n",
+    "# m.Y_combined = pe.Var(m.Yy, initialize=0, domain=pe.NonNegativeReals)\n",
+    "\n",
+    "# m.y_t_matrix = pe.Set(initialize=m.processes*m.T)\n",
+    "# m.y_t_combined = pe.Var(m.y_t_matrix, domain=pe.Binary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "\"Index 'p1' is not valid for indexed component 'Yy'\"",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [11], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m# print([c for c in m.Y])\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m m\u001b[39m.\u001b[39mprocesses:\n\u001b[1;32m----> 4\u001b[0m     \u001b[39mprint\u001b[39m([a \u001b[39mfor\u001b[39;00m a \u001b[39min\u001b[39;00m m\u001b[39m.\u001b[39;49mYy[j]])\n\u001b[0;32m      6\u001b[0m \u001b[39m# m.Y_combined = pe.Var(m.Y, domain=pe.Boolean)\u001b[39;00m\n\u001b[0;32m      7\u001b[0m \n\u001b[0;32m      8\u001b[0m \u001b[39m# # This is the process working\u001b[39;00m\n\u001b[0;32m      9\u001b[0m \u001b[39m# m.S = pe.RangeSet(0, duration - 1)\u001b[39;00m\n",
+      "File \u001b[1;32me:\\repos\\carbon-hack\\carbonprocessoptimizer\\venv\\lib\\site-packages\\pyomo\\core\\base\\indexed_component.py:575\u001b[0m, in \u001b[0;36mIndexedComponent.__getitem__\u001b[1;34m(self, index)\u001b[0m\n\u001b[0;32m    573\u001b[0m \u001b[39mif\u001b[39;00m index\u001b[39m.\u001b[39m\u001b[39m__class__\u001b[39m \u001b[39mis\u001b[39;00m EXPR\u001b[39m.\u001b[39mGetItemExpression:\n\u001b[0;32m    574\u001b[0m     \u001b[39mreturn\u001b[39;00m index\n\u001b[1;32m--> 575\u001b[0m validated_index \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_validate_index(index)\n\u001b[0;32m    576\u001b[0m \u001b[39mif\u001b[39;00m validated_index \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m index:\n\u001b[0;32m    577\u001b[0m     index \u001b[39m=\u001b[39m validated_index\n",
+      "File \u001b[1;32me:\\repos\\carbon-hack\\carbonprocessoptimizer\\venv\\lib\\site-packages\\pyomo\\core\\base\\indexed_component.py:800\u001b[0m, in \u001b[0;36mIndexedComponent._validate_index\u001b[1;34m(self, idx)\u001b[0m\n\u001b[0;32m    794\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(\n\u001b[0;32m    795\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mCannot treat the scalar component \u001b[39m\u001b[39m'\u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    796\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mas an indexed component\u001b[39m\u001b[39m\"\u001b[39m \u001b[39m%\u001b[39m ( \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mname, ))\n\u001b[0;32m    797\u001b[0m \u001b[39m#\u001b[39;00m\n\u001b[0;32m    798\u001b[0m \u001b[39m# Raise an exception\u001b[39;00m\n\u001b[0;32m    799\u001b[0m \u001b[39m#\u001b[39;00m\n\u001b[1;32m--> 800\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(\n\u001b[0;32m    801\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mIndex \u001b[39m\u001b[39m'\u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m is not valid for indexed component \u001b[39m\u001b[39m'\u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    802\u001b[0m     \u001b[39m%\u001b[39m ( idx, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mname, ))\n",
+      "\u001b[1;31mKeyError\u001b[0m: \"Index 'p1' is not valid for indexed component 'Yy'\""
+     ]
+    }
+   ],
+   "source": [
+    "# print([c for c in m.Y])\n",
+    "\n",
+    "for j in m.processes:\n",
+    "    print([a for a in m.Yy[j]])\n",
+    "\n",
+    "# m.Y_combined = pe.Var(m.Y, domain=pe.Boolean)\n",
+    "\n",
+    "# # This is the process working\n",
+    "# m.S = pe.RangeSet(0, duration - 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print([pe.value(a) for a in m.Y_combined['p1', :]])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "m.c = pe.ConstraintList()\n",
+    "for j in m.processes:\n",
+    "    # Total process duration should be preserved\n",
+    "    m.c.add(m.finish[j] == m.start[j] + processes[j]['duration'])"
+   ]
   }
  ],
  "metadata": {
